# geets

./: .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-05-02-exports-download-drive.md  2026-05-02-s2l8-optical-loader.md  2026-05-03-modis-module.md  2026-05-03-optical-split.md  2026-05-03-terrain-module.md
docs/superpowers/specs/: 2026-05-02-exports-design.md  2026-05-02-s2l8-optical-design.md  2026-05-03-modis-module-design.md  2026-05-03-optical-split-design.md  2026-05-03-terrain-module-design.md
scripts/: install_local.py  ship.py
src/geets/: __init__.py  pairs.py
src/geets/climate/: __init__.py  chirps.py  era5.py
src/geets/modis/: __init__.py  fire.py  lst.py  sets.py  sr.py  vi.py
src/geets/optical/: __init__.py  common.py  landsat.py  s2l8.py  sentinel2.py
src/geets/radar/: s1grd.py
src/geets/terrain/: __init__.py  dem.py
src/geets/timeseries/: __init__.py  aggregate.py  plot.py  reduce.py
src/geets/tools/: __init__.py  install_local.py  ship.py
src/geets/utils/: __init__.py  exports.py  gee.py  image_utils.py  output.py
tests/unit/: test_exports.py  test_image_utils.py  test_s2l8.py
tests/unit/modis/: test_fire.py  test_lst.py  test_sets.py  test_sr.py  test_vi.py
tests/unit/optical/: test_common.py  test_landsat.py  test_sentinel2.py
tests/unit/terrain/: test_dem.py
