[project]
name = "geets"
version = "0.1.5"
description = "Google Earth Engine Tools for Earth Science"
readme = "README.md"
authors = [
    { name = "kwundram2602", email = "134778951+kwundram2602@users.noreply.github.com" }
]
private = true
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.7.14",
    "folium>=0.20.0",
    "geemap>=0.37.1",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

# Tooling defaults for linting and typechecking (added by uv-project guidance)
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[project.optional-dependencies]
dev = ["ruff", "ty", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
install-local = "geets.tools.install_local:main"
ship = "geets.tools.ship:main"
